--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "mongoose": "^6.2.3",
+    "mongoose-unique-validator": "^3.0.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
   }
